k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning-hebrew
  labels:
    name: learning-hebrew
