k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learning-hebrew-ingress
  namespace: learning-hebrew
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "learning-hebrew-ip"
    networking.gke.io/managed-certificates: "learning-hebrew-ssl"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learning-hebrew-service
            port:
              number: 80
